--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,8 +13,12 @@
  *= require_tree .
  *= require_self
  */
- @import "bulma";
+@import "bulma";
 
- .notification:not(:last-child){
+.notification:not(:last-child){
 	margin-bottom: 0;
+}
+
+.profile_image {
+	border-radius: 50%;
 }
